objects/ssot__BenefitSpecialty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareSpecialtyId__c</fullName>
        <label>Care Specialty</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Specialty Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853334097_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitSpecialty_CareSpecialtyId_map_rel</label>
        <referenceTo>ssot__CareSpecialty__dlm</referenceTo>
        <relationshipLabel>BenefitSpecialty_CareSpecialtyId_map_rel</relationshipLabel>
        <relationshipName>rel_1732853334097_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732853346117_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitSpecialty_BenefitId_map_Benef_rel</label>
        <referenceTo>ssot__Benefit__dlm</referenceTo>
        <relationshipLabel>BenefitSpecialty_BenefitId_map_Benef_rel</relationshipLabel>
        <relationshipName>rel_1732853346117_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>